<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp"
    >

    <ImageView
        android:id="@+id/img_signup"
        android:layout_width="180dp"
        android:layout_height="180dp"

        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/signupimg"
        />

    <TextView
        android:id="@+id/txt1_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/img_signup"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintLeft_toLeftOf="@id/img_signup"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693" />

    <TextView
        android:id="@+id/txt2_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New User"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/img_signup"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@id/txt1_signup"
        app:layout_constraintRight_toRightOf="@id/txt1_signup"
        app:layout_constraintTop_toTopOf="@id/txt1_signup"
        app:layout_constraintVertical_bias="0.593" />

    <View
        android:layout_width="340dp"
        android:layout_height="2dp"
        android:id="@+id/divider_signup"
        app:layout_constraintTop_toBottomOf="@id/img_signup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        />

    <EditText
        android:id="@+id/Username_snUp"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="12dp"
        android:hint="User Name"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_signup" />

    <EditText
        android:id="@+id/Email_snUp"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:hint="Email"
        android:inputType="text|textEmailAddress"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Username_snUp" />

    <EditText
        android:id="@+id/Password_snUp"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/ic_baseline_password_24"
        android:drawablePadding="12dp"
        android:hint="Password"
        android:inputType="number|textPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Email_snUp" />


    <EditText
        android:id="@+id/address_snUp"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/ic_baseline_add_location_alt_24"
        android:drawablePadding="12dp"
        android:hint="Address"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Password_snUp" />

    <EditText
        android:id="@+id/postalcode_snUp"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/ic_baseline_pin_drop_24"
        android:drawablePadding="12dp"
        android:hint="@string/postal_code"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_snUp" />

    <EditText
        android:id="@+id/contactnum_snUp"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/ic_baseline_phone_24"
        android:drawablePadding="12dp"
        android:hint="@string/contact_number"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postalcode_snUp"
        android:drawableStart="@drawable/ic_baseline_phone_24"
        android:autofillHints="" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Register_snUp"
        app:layout_constraintTop_toBottomOf="@id/contactnum_snUp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="25dp"
        android:text="@string/register"
        android:textStyle="bold"
        android:backgroundTint="@color/white"
        android:textColor="@color/oranjellow"
        android:layout_marginEnd="25dp" />

    <Button
        android:id="@+id/bcktoMA_snUp"
        android:layout_width="60dp"
        android:layout_height="55dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="250dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/Register_snUp"
        app:layout_constraintTop_toBottomOf="@id/contactnum_snUp" />

    <ProgressBar
        android:id="@+id/progressbar_snUp"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
